--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  /* background-color: blue; */
+  padding: 20px;
+}
+
 .axis {
   font: 10px sans-serif;
 }
@@ -6,4 +11,19 @@
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
+}
+
+.hidden {
+  display:none;
+}
+
+
+.loading {
+  top: 0;
+  left: 0;
+  padding: 20px;
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
 }
